minio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: ${MINIO_NAMESPACE}
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-local
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-public
  hostnames:
  - "${MINIO_HOST}"
  - "${MINIO_PUBLIC_HOST}"
  rules:
  - backendRefs:
    - name: minio-console
      port: 9001
